--- a/tpls/knowledgeRepo/knowledgeList.html
+++ b/tpls/knowledgeRepo/knowledgeList.html
@@ -103,7 +103,40 @@
                     updatePagerIcons(table);
                     enableTooltips(table);
                 }, 0);
+            },
+
+
+
+
+
+            gridComplete:function(){
+                //单选处理
+                if(true){
+                    var gridId=grid_selector.substring(1);
+                    $("#cb_"+gridId).hide();//隐藏全选按钮
+                    $(grid_selector).find("td[aria-describedby='"+gridId+"_cb']").find("input[type='checkbox']").prop("type","radio") ;//将checkbox替换为radio
+                    $(grid_selector).find("td[aria-describedby='"+gridId+"_cb']").find("input[type='radio']").prop("name",gridId);//radio设为同一名字
+                }
+
+            },
+
+            beforeSelectRow:function(){
+                //单选处理
+                if(true){
+                    // $(grid_selector).jqGrid('clearSelect'); //执行自定义的函数（下面会讲）
+                    $(grid_selector).find(".ui-state-highlight").removeClass("ui-state-highlight").removeAttr("aria-selected"); //样式控制
+                    return true;
+                }
             }
+
+
+
+
+
+
+
+
+
         });
 //浏览导航栏添加功能部分代码
 
@@ -155,9 +188,14 @@
             onClickButton:function () {
                 var ids = $(grid_selector).jqGrid('getGridParam','selarrrow');
 
+                if(ids==''){
+                    alert("请选择需要编辑的内容");
 
+                    location.href="index.html#!/knowledgeRepo/knowledgeList.html"
 
-                location.href="index.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids
+                }else {
+
+                location.href="index.html#!/knowledgeRepo/knowledgeEdit.html?id="+ids}
             },
 //                title:"知识编辑",
             position:"first"
