--- a/tpls/index.html
+++ b/tpls/index.html
@@ -30,6 +30,25 @@
 		<!--<script src="assets/js/html5shiv.js"></script>-->
 		<script src="../components/javascripts/respond.min.js"></script>
 		<![endif]-->
+		<style>
+			#login-box-bg{
+				background-color: rgba(0, 0, 0, 0.2);
+				position: fixed;
+				z-index: 998;
+				width: 100%;
+				height: 100%;
+			}
+			#login-box{
+				position: relative;
+				background-color: #EEEEEE;
+				top:20%;
+				z-index: 999;
+				border: 1px solid gray;
+				border-radius: 5px;
+				width: 400px;
+				height: 300px;
+			}
+		</style>
 	</head>
 
 	<body class="myAceSkin">
@@ -161,7 +180,30 @@
 			<script type="text/javascript">
 				try{ace.settings.check('main-container' , 'fixed')}catch(e){}
 			</script>
-
+			<!--<div id="login-box-bg" ng-hide="{{hideflag}}" ng-controller="loginboxCtrl">-->
+				<!--<div id="login-box" class="container">-->
+					<!--<div class="row">-->
+						<!--<div class="col-sm-12" style="text-align: center">-->
+							<!--<h1>登录</h1>-->
+						<!--</div>-->
+						<!--<div class="col-sm-10 col-sm-offset-1" >-->
+							<!--<form class="form-horizontal" role="form">-->
+								<!--<div class="form-group">-->
+									<!--<label>用户名</label>-->
+									<!--<input class="form-control" name="username" ng-model="username" placeholder="输入用户名" type="text">-->
+								<!--</div>-->
+								<!--<div class="form-group">-->
+									<!--<label>密码</label>-->
+									<!--<input class="form-control" name="password" ng-model="password" placeholder="输入密码" type="password">-->
+								<!--</div>-->
+								<!--<div style="text-align: center">-->
+									<!--<button class="btn btn-info" style="display: inline-block" ng-click="login()">登录</button>-->
+								<!--</div>-->
+							<!--</form>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
 			<div class="main-container-inner">
 				<a class="menu-toggler" id="menu-toggler" href="#">
 					<span class="menu-text"></span>
