--- a/tpls/index.html
+++ b/tpls/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -51,7 +51,7 @@
 		</style>
 	</head>
 
-	<body class="myAceSkin">
+	<body class="myAceSkin"  ng-app="indexapp">
 		<div class="navbar navbar-default" id="navbar">
 			<script type="text/javascript">
 				try{ace.settings.check('navbar' , 'fixed')}catch(e){}
@@ -67,7 +67,7 @@
 					</a><!-- /.brand -->
 				</div><!-- /.navbar-header -->
 
-				<div class="navbar-header pull-right" role="navigation">
+				<div class="navbar-header pull-right" role="navigation" ng-controller="navController">
 					
 					<ul class="nav ace-nav">
 
@@ -140,7 +140,8 @@
 								<img class="nav-user-photo" src="../components/images/user.jpg" alt="Jason's Photo" />
 								<span class="user-info">
 									<small>欢迎光临,</small>
-									Jason
+									<!--Jason-->
+                                    {{currUser.uName}}
 								</span>
 
 								<i class="icon-caret-down"></i>
@@ -163,7 +164,7 @@
 
 								<li class="divider"></li>
 
-								<li>
+								<li ng-click="quit()">
 									<a href="#">
 										<i class="icon-off"></i>
 										退出
@@ -176,7 +177,7 @@
 			</div><!-- /.container -->
 		</div>
 
-		<div class="main-container" id="main-container" ng-app="indexapp" ng-controller="mainCtrl">
+		<div class="main-container" id="main-container" ng-controller="mainCtrl">
 			<script type="text/javascript">
 				try{ace.settings.check('main-container' , 'fixed')}catch(e){}
 			</script>
