新建用户功能

--- a/tpls/resource/resourceList.html
+++ b/tpls/resource/resourceList.html
@@ -85,6 +85,7 @@
                 leaf_field: "isLeaf",
                 expanded_field: "expanded"
             },
+            treeIcons:{plus:'glyphicon glyphicon-chevron-right',minus:'glyphicon glyphicon-chevron-down',leaf:'glyphicon glyphicon-arrow-right'},
             colNames: colNames,
             colModel: colModel,
             page:false,
