修改详情页

--- a/tpls/knowledgeDetail.html
+++ b/tpls/knowledgeDetail.html
@@ -28,11 +28,11 @@
 <div class="container" ng-controller="detailController">
     <div class="row item">
         <div class="col-lg-12">
-            <h3 style="text-align: center"><b>{{response.kTitle}}</b></h3>
+            <h2 style="text-align: center"><b>{{response.kTitle}}</b></h2>
         </div>
     </div>
-    <div class="row item" style="border-bottom: solid 1px silver;">
-        <div class="col-lg-12">
+    <div class="row item">
+        <div class="col-lg-12" style="border-bottom: solid 1px silver;">
             <ul class="secondTitle">
                 <li>创建人:<b>{{response.createUserId}}</b></li>
                 <li>创建时间:<b>{{response.createTime}}</b></li>
